Added the actual bolierPlate

--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Fernando Rodriguez">
-        <!--This is required in the future for my grades!-->
-        <meta name="discrption" content="Inofrmation on meta data.">
+        <meta name="discrption" content="This is a basic BoilerPlate">
 
-        <meta property="og:image" content="OpenGraph.png">
-        <meta property=title" content="Yes">
-        <meta property="description" content="Yes">
-        <!--Links an image-->
-
+        <meta property="og:image" content="Favacon.png">
+        <meta property="FavaCon" content="Chems with code">
+        <meta property="A picture of Chems with Code writen" content="Future FavaCon">
         <link rel="shortcut icon" href="Favacon.png" type="image/x-icon">
-        <!--Will be required to do, doesn't have to be complicated, this is the icon next to the title on the tab-->
         
-
-
-
         <title>Boiler Plate</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Japanese example: <span lang="ja">こんにちは</span></p>
+        <p>Basic Boiler Plate in Russian: <span lang="Russian">
+            Базовая плита котла</span></p>
     </body>
 </html>
